--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production",
     "lint": "npx tsc --noEmit && npx eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "lint-fix": "npx tsc --noEmit && npx eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
+    "lint-fix": "npx tsc --noEmit && npx eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -19,8 +21,9 @@
   "bugs": {
     "url": "https://github.com/IgorKashintsev/SpaceX/issues"
   },
-  "homepage": "https://github.com/IgorKashintsev/SpaceX#readme",
+  "homepage": "https://igorkashintsev.github.io/SpaceX",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
